# clausewitz-parser

./: .gitignore  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  i_file_operations.hpp  i_tokenizer.hpp  parser.cpp  parser.hpp  reserved_tokens.hpp  tokenizer.cpp  tokenizer.hpp  tokens.hpp
test/: CMakeLists.txt  parser_tests.cpp  test_case.hpp  tokenizer_tests.cpp
test/mocks/: i_file_operations_mock.hpp  i_tokenizer_mock.hpp
